--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>script-exporter</groupId>
 	<artifactId>script-exporter</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Script exporter for prometheus.</description>
 	<url>https://github.com/CodeGerm/script-exporter</url>
@@ -15,7 +14,7 @@
 		<url>https://github.com/CodeGerm/script-exporter</url>
 		<connection>scm:git:git@github.com:CodeGerm/script-exporter.git</connection>
 		<developerConnection>scm:git:git@github.com:CodeGerm/script-exporter.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>script-exporter-1.0.0</tag>
 	</scm>
 	<licenses>
 		<license>
@@ -154,8 +153,7 @@
 						<configuration>
 							<shadedArtifactAttached>true</shadedArtifactAttached>
 							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>exporter.ScriptExporter</mainClass>
 								</transformer>
 							</transformers>
