--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>exporter.ScriptExporter</mainClass>
+									<mainClass>main.java.exporter.ScriptExporter</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
